2010-07-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/project.c, src/project.h:
   Show the Project Properties build tab when choosing 'Set Build
   Commands' for now to prevent confusion with non-project commands.


2010-07-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c, doc/geany.txt, doc/geany.html:
   Fix Grep --exclude-dir example.


2010-07-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/sidebar.c:
   Add sidebar Documents popup menu item 'Find in Files'.
 * src/keyfile.c, src/main.c, src/editor.c:
   Don't unnecessarily test G_FILE_TEST_IS_SYMLINK when testing
   G_FILE_TEST_IS_REGULAR (patch by Dimitar Zhekov, thanks).


2010-07-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Fix wording - restarting is required for hidden prefs.
   File templates don't need manual reloading anymore.
 * src/ui_utils.c:
   Fix only adding project base path to Find in Files history if it
   isn't already there (oops).
 * src/msgwindow.c:
   Parse lines in the Messages window even if Find in Files hasn't
   been used yet (patch by Jiří Techet, thanks).


2010-07-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/LexCPP.cxx, src/highlighting.c:
   Add C++ lexer property fold.cpp.comment.explicit (patch sent); set
   it disabled.
 * src/utils.h, src/highlighting.c, doc/geany.txt, doc/geany.html,
   data/filetypes.common:
   Add filetypes.common fold_symbol_highlight color setting.
   Add API macro foreach_range().
 * src/printing.c, doc/geany.txt, doc/geany.html:
   Always use white background color when printing (except for text
   with a white foreground) to save ink (should fix #2968998).
 * src/build.c, src/build.h, doc/geany.txt, doc/geany.html:
   Limit build error editor indicators to 50, but parse all errors in
   the Compiler tab (fixes #3019823).

